# heatwave_definition

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  calc_hwmid.py  classify_countries_matrix.py  load_copernicus.py  load_e_obs_data.py  pyproject.toml  rank_years_by_hwmid.py  requirements-lock.txt  requirements.txt
.github/workflows/: release.yml  tests.yml
configs/: copernicus_rcp45.example.toml  copernicus_rcp85.example.toml  country_weights.example.csv  e_obs.example.toml  era5.example.toml  metrics_pickle.example.toml
docs/: data_download.md  data_provenance.md  publication_checklist.md  reproducibility.md
heatwave_definition/: __init__.py  cli.py  hwmid.py  io.py  legacy.py  metrics.py  plot_style.py  ranking.py  raw_copernicus.py  raw_eobs.py  raw_era5.py  regions.py
results/: README.md
results/cmip6/: cmip6_de_fr_file_inventory.csv  (+2 more)
scripts/: analyze_era5_heatwave_event.py  build_appendix_tables.py  check_public_release.py  derive_country_weights_from_tyndp2024_pemmdb.py  download_era5_t2m.py  export_primary_cmip5_rankings.py  make_additional_paper_figures.py  make_climate_data_figures.py  make_cmip6_internal_figures.py  make_era5_event_period_comparison.py  make_historical_data_product_comparison.py  make_hwmid_timeseries_example.py  make_scenario_figure.py  make_workflow_example_figure.py  rank_cmip6_tas.py  rank_copernicus_ensembles.py  rank_eobs_tx.py  rank_era5_t2m.py  rerun_cmip5_primary_sensitivities.py  rerun_eobs_v33_historical_sensitivities.py  run_complete_climate_workflow.py  run_demo.py  run_publication_reproduction.py  select_era5_automatic_heatwave_windows.py  sensitivity_country_sets.py  sensitivity_country_weights.py  sensitivity_population_weighting.py  sensitivity_ranking_criteria.py  snapshot_public_results.py  summarize_ensemble_rankings.py  summarize_scenario_selection.py  update_paper_with_ensemble_sensitivity.py  write_data_manifest.py  write_historical_data_product_manifest.py  write_software_environment.py
tests/: test_hwmid.py
(+40 files in other folders)
