[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatwave-definition"
version = "1.2.1"
description = "HWMId-based heatwave scenario definition for energy-system stress tests"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  { name = "Max Kleinebrahm" },
  { name = "Johannes Schuhmacher" },
  { name = "Eric Jahnke" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "netCDF4>=1.6",
  "cartopy>=0.22",
  "shapely>=2.0",
  "matplotlib>=3.8",
  "openpyxl>=3.1",
  "cdsapi>=0.7"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/johannesschuhmacher/heatwave_definition"
Repository = "https://github.com/johannesschuhmacher/heatwave_definition"
Issues = "https://github.com/johannesschuhmacher/heatwave_definition/issues"
Archive = "https://doi.org/10.5281/zenodo.20793872"

[project.scripts]
heatwave-definition = "heatwave_definition.cli:main"

[tool.setuptools.packages.find]
include = ["heatwave_definition*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
